--- a/_includes/copyright.html
+++ b/_includes/copyright.html
@@ -1,5 +1,4 @@
-<div style="margin-top:2em;padding:0 1.5em;border:1px solid #d3d3d3;background-color:#deebf7">
-  <h3>文档信息</h3>
+<div style="font-size: 16px;border-left: 3px solid #3498db;background-color:#f0f8ff;padding: 16px 0px 1px 1px;border-radius: 3px;">
   <ul>
     <li>本文作者：<a href="{{ site.url }}" target="_blank">{{ site.author }}</a></li>
     <li>本文链接：<a href="{{ site.url }}{{ page.url }}" target="_blank">{{ site.url }}{{ page.url }}</a></li>
