--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,8 @@
     <footer class="container">
 
-      {% include footer-ad.html %}
-
         <div class="site-footer" role="contentinfo">
             <div class="copyright left mobile-block">
-                    © 2015
+                    © 2021
                     <span title="{{ site.author}}">{{ site.author }}</span>
                     <a href="javascript:window.scrollTo(0,0)" class="right mobile-visible">TOP</a>
             </div>
@@ -25,14 +23,24 @@
                 {% endfor %}
                 <li><a href="{{ site.url }}{{ site.subscribe_rss }}"><span class="octicon octicon-rss" style="color:orange;"></span></a></li>
             </ul>
-
-          {% include visit-stat.html %}
-
+            <div class="mobile-hidden" style="margin-top:8px">
+                <span id="busuanzi_container_site_pv">
+                    本站访问量&nbsp;<span id="busuanzi_value_site_pv"></span>次
+                </span>
+                <span id="busuanzi_container_site_uv">
+                    本站访客数&nbsp;<span id="busuanzi_value_site_uv"></span>人
+                </span>
+                {% if site.components.busuanzi.start_date %}
+                / 统计始于 {{ site.components.busuanzi.start_date }}
+                {% endif %}
+            </div>
         </div>
     </footer>
     <div class="tools-wrapper">
       <a class="gotop" href="#" title="回到顶部"><span class="octicon octicon-arrow-up"></span></a>
     </div>
+
+    <script async src="{{ assets_base_url }}/assets/vendor/busuanzi/2.3/busuanzi.pure.mini.js"></script>
     <!-- / footer -->
     {% if site.components.share.enabled %}
     <script src="{{ assets_base_url }}/assets/vendor/share.js/dist/js/share.min.js"></script>
@@ -114,18 +122,30 @@ $(document).ready(function(){
     </script>
     {% endif %}
 
+
     {% if site.google.analytics_id %}
     <div style="display:none">
-      <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        <script async src="https://www.googletagmanager.com/gtag/js?id={{site.google.analytics_id}}"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
 
-        ga('create', '{{ site.google.analytics_id }}', 'auto');
-        ga('send', 'pageview');
-
-      </script>
+            gtag('config', '{{site.google.analytics_id}}');
+        </script>
+    </div>
+    {% endif %}
+    {% if site.baidu.analytics_id %}
+    <div style="display:none">
+        <script>
+            var _hmt = _hmt || [];
+            (function () {
+                var hm = document.createElement("script");
+                hm.src = "https://hm.baidu.com/hm.js?{{site.baidu.analytics_id}}";
+                var s = document.getElementsByTagName("script")[0];
+                s.parentNode.insertBefore(hm, s);
+            })();
+        </script>
     </div>
     {% endif %}
 </body>
