--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,6 +24,11 @@ layout: default
             <a href="{{ site.url }}/categories/#{{ cat }}" title="{{ cat }}">{{ cat }}</a>
           </span>
           {% endfor %}
+          <span class="meta-info octicon octicon-eye">
+            <span id="busuanzi_container_page_pv meta-info">
+              浏览量 <span id="busuanzi_value_page_pv"></span> 次
+            </span>
+          </span>
           {% if site.components.word_count.enabled %}
           <span class="meta-info">
             <span class="octicon octicon-clock"></span>
@@ -45,7 +50,6 @@ layout: default
 <section class="container content">
 <div class="columns">
   <div class="column three-fourths" >
-    {% include content-header-ad.html %}
     <article class="article-content markdown-body">
     {{ content }}
     {% include copyright.html %}
@@ -53,7 +57,6 @@ layout: default
     <div class="share">
       {% include sns-share.html %}
     </div>
-    {% include content-footer-ad.html %}
     <div class="comment">
       {% include comments.html %}
     </div>
