--- a/_layouts/wiki.html
+++ b/_layouts/wiki.html
@@ -24,15 +24,13 @@ layout: default
 <section class="container content">
 <div class="columns">
   <div class="column three-fourths" >
-    {% include content-header-ad.html %}
     <article class="article-content markdown-body">
     {{ content }}
-    {% include copyright.html %}
+<!--    {% include copyright.html %}-->
     </article>
     <div class="share">
       {% include sns-share.html %}
     </div>
-    {% include content-footer-ad.html %}
     <div class="comment">
       {% include comments.html %}
     </div>
