--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,13 +25,13 @@
             </ul>
             <div class="mobile-hidden" style="margin-top:8px">
                 <span id="busuanzi_container_site_pv">
-                    本站访问量&nbsp;<span id="busuanzi_value_site_pv"></span>次
+                    本站访问量&nbsp;<span id="busuanzi_value_site_pv"></span>&nbsp;次
                 </span>
                 <span id="busuanzi_container_site_uv">
-                    本站访客数&nbsp;<span id="busuanzi_value_site_uv"></span>人
+                    &nbsp;&nbsp;本站访客数&nbsp;<span id="busuanzi_value_site_uv"></span>&nbsp;人
                 </span>
                 {% if site.components.busuanzi.start_date %}
-                / 统计始于 {{ site.components.busuanzi.start_date }}
+                /&nbsp;统计始于&nbsp;{{ site.components.busuanzi.start_date }}
                 {% endif %}
             </div>
         </div>
