--- a/_includes/header.html
+++ b/_includes/header.html
@@ -79,6 +79,32 @@
     {% if site.url contains 'mazhuang.org' %}
     <script data-ad-client="ca-pub-7093222719567591" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     {% endif %}
+
+    {% if site.google.analytics_id %}
+    <div style="display:none">
+        <script async src="https://www.googletagmanager.com/gtag/js?id={{site.google.analytics_id}}"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', '{{site.google.analytics_id}}');
+        </script>
+    </div>
+    {% endif %}
+    {% if site.baidu.analytics_id %}
+    <div style="display:none">
+        <script>
+            var _hmt = _hmt || [];
+            (function () {
+                var hm = document.createElement("script");
+                hm.src = "https://hm.baidu.com/hm.js?{{site.baidu.analytics_id}}";
+                var s = document.getElementsByTagName("script")[0];
+                s.parentNode.insertBefore(hm, s);
+            })();
+        </script>
+    </div>
+    {% endif %}
 </head>
 <body class="{{ page.class }}" data-mz="{{ page.class }}">
     <header class="site-header">
