add weather plugin

--- a/_layouts/wiki.html
+++ b/_layouts/wiki.html
@@ -15,7 +15,7 @@ layout: default
       </div>
     </div>
     <div class="column one-fourth mobile-hidden">
-      {% include sidebar-qrcode.html %}
+<!--      {% include sidebar-weather.html %}-->
     </div>
   </div>
 </div>
