--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -9,13 +9,13 @@ layout: default
 <section class="collection-head small geopattern" data-pattern-id="{{ page.title | truncate: 15, ''}}">
     <div class="container">
         <div class="columns">
-            <div class="column two-thirds">
+            <div class="column two-thirds page-title">
                 <div class="collection-title">
                     <h1 class="collection-header">{{ page.title }}</h1>
                 </div>
             </div>
-            <div class="column one-third mobile-hidden">
-              {% include sidebar-qrcode.html %}
+            <div class="column one-third mobile-hidden weather-info">
+              {% include sidebar-weather.html %}
             </div>
         </div>
     </div>
