--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -9,7 +9,7 @@ layout: default
 <section class="collection-head small geopattern" data-pattern-id="{{ page.title | truncate: 15}}">
     <div class="container">
       <div class="columns">
-        <div class="column two-thirds">
+        <div class="column two-thirds page-title">
           <div class="collection-title">
             <h1 class="collection-header">{{ page.title }}</h1>
             {% if page.subtitle %}
@@ -21,8 +21,8 @@ layout: default
             {% endif %}
           </div>
         </div>
-        <div class="column one-third mobile-hidden">
-          {% include sidebar-qrcode.html %}
+        <div class="column one-third mobile-hidden weather-info">
+          {% include sidebar-weather.html %}
         </div>
       </div>
     </div>
