--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -39,8 +39,8 @@ layout: default
       </div>
     </div>
     <div class="column one-fourth mobile-hidden">
-      <div class="collection-title">
-        {% include sidebar-qrcode.html %}
+      <div class="collection-title ">
+<!--        {% include sidebar-weather.html %}-->
       </div>
     </div>
   </div>
