--- a/assets/css/globals/common.css
+++ b/assets/css/globals/common.css
@@ -588,6 +588,14 @@
     box-shadow: inset 0 -1px 0 #bbb
 }
 
+.weather-info {
+    line-height: normal
+}
+
+.page-title {
+    width: 54.3%
+}
+
 .pl-c {
     color: #969896
 }
