添加禁用网页调试组件

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -121,5 +121,17 @@
                 {% endfor %}
             </nav>
         </div>
+        {% if site.components.html_debug.enabled %}
+        <script>
+            document.oncontextmenu = function () { return false; };
+            document.onkeydown = function () {
+                if (window.event && window.event.keyCode == 123) {
+                    event.keyCode = 0;
+                    event.returnValue = false;
+                    return false;
+                }
+            };
+        </script>
+        {% endif %}
     </header>
     <!-- / header -->
