添加鼠标点击烟火效果

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -143,6 +143,8 @@ $(document).ready(function(){
 });
     </script>
     {% endif %}
-
-</body>
+    {% if site.components.firework.enabled %}
+    <script src="{{ assets_base_url }}/assets/js/mouse-click.js"></script>
+    {% endif %}
+    </body>
 </html>
