--- a/_includes/header.html
+++ b/_includes/header.html
@@ -109,7 +109,11 @@
 <body class="{{ page.class }}" data-mz="{{ page.class }}">
     <header class="site-header">
         <div class="container">
-            <h1><a href="{{ site.url }}/" title="{{ site.title }}"><span class="octicon octicon-mark-github"></span> {{ site.title }}</a></h1>
+            <h1 >
+                <a href="{{ site.url }}/" title="{{ site.title }}" class="title-info">
+                    <img src="{{ assets_base_url }}/assets/images/avatar.jpeg" class="avatar-top avatar-user avatar avatar-small">{{ site.title }}
+                </a>
+            </h1>
             <button class="collapsed mobile-visible" type="button" onclick="toggleMenu();">
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
