increase article width

--- a/_includes/sidebar-weather.html
+++ b/_includes/sidebar-weather.html
@@ -1,5 +1,7 @@
 {% if site.components.weather.enabled %}
-<div id="he-plugin-standard" style="line-height: normal;"></div>
+<div class="weather-info">
+    <div id="he-plugin-standard"></div>
+</div>
 <script>
     WIDGET = {
         "CONFIG": {
