--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -21,7 +21,7 @@ layout: default
             {% endif %}
           </div>
         </div>
-        <div class="column one-third mobile-hidden weather-info">
+        <div class="column one-third mobile-hidden">
           {% include sidebar-weather.html %}
         </div>
       </div>
