--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -14,7 +14,7 @@ layout: default
                     <h1 class="collection-header">{{ page.title }}</h1>
                 </div>
             </div>
-            <div class="column one-third mobile-hidden weather-info">
+            <div class="column one-third mobile-hidden ">
               {% include sidebar-weather.html %}
             </div>
         </div>
