--- a/_includes/header.html
+++ b/_includes/header.html
@@ -76,21 +76,19 @@
     <script src="{{ assets_base_url }}/assets/js/jquery-ui.js"></script>
     <script src="{{ assets_base_url }}/assets/js/main.js"></script>
 
-    {% if site.url contains 'mazhuang.org' %}
-    <script data-ad-client="ca-pub-7093222719567591" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    {% if site.url contains 'flynine.top' %}
+    <script data-ad-client="" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     {% endif %}
 
     {% if site.google.analytics_id %}
-    <div style="display:none">
-        <script async src="https://www.googletagmanager.com/gtag/js?id={{site.google.analytics_id}}"></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag(){dataLayer.push(arguments);}
-            gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id={{site.google.analytics_id}}"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
 
-            gtag('config', '{{site.google.analytics_id}}');
-        </script>
-    </div>
+        gtag('config', '{{site.google.analytics_id}}');
+    </script>
     {% endif %}
     {% if site.baidu.analytics_id %}
     <div style="display:none">
