--- a/_includes/copyright.html
+++ b/_includes/copyright.html
@@ -1,3 +1,4 @@
+{% if page.copyright != false %}
 <div style="font-size: 16px;border-left: 3px solid #3498db;background-color:#f0f8ff;padding: 16px 0px 1px 1px;border-radius: 3px;">
   <ul>
     <li>本文作者：<a href="{{ site.url }}" target="_blank">{{ site.author }}</a></li>
@@ -5,3 +6,4 @@
     <li>版权声明：自由转载-非商用-非衍生-保持署名（<a href="http://creativecommons.org/licenses/by-nc-nd/3.0/deed.zh" target="_blank">创意共享3.0许可证</a>）</li>
   </ul>
 </div>
+{% endif %}
