--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -64,6 +64,7 @@ layout: default
   <div class="column one-fourth">
     {% include sidebar-search.html %}
     {% include sidebar-post-nav.html %}
+    {% include sidebar-detail-ad.html %}
   </div>
 </div>
 </section>
