update jsdelivr CDN

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,8 +3,8 @@ layout: compress
 ---
 
 {% assign assets_base_url = site.url %}
-{% if site.cdn.jsdelivr.enabled %}
-{% assign assets_base_url = "https://cdn.jsdelivr.net/gh/" | append: site.repository | append: '@master' %}
+{% if site.fastly.jsdelivr.enabled %}
+{% assign assets_base_url = "https://fastly.jsdelivr.net/gh/" | append: site.repository | append: '@master' %}
 {% endif %}
 {% assign assets_images_url = '<img src="' | append: assets_base_url | append: "/images" %}
 {% include header.html %}
