--- a/_includes/sidebar-detail-ad.html
+++ b/_includes/sidebar-detail-ad.html
@@ -1,10 +1,10 @@
-{% if site.google.adsense.sidebar-detail and site.url contains 'flynine.top' %}
+{% if site.google.adsense.enabled and site.google.adsense.sidebar-detail and site.url contains 'blog.nine.gt.tc' %}
 <!-- 博客右侧，搜索下方 -->
 <ins class="adsbygoogle"
      style="display:inline-block;width:300px;height:250px"
      data-ad-client=""
      data-ad-slot=""></ins>
 <script>
-    (adsbygoogle = window.adsbygoogle || []).push({});
+     (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 {% endif %}
