--- a/assets/css/globals/common.css
+++ b/assets/css/globals/common.css
@@ -2,8 +2,19 @@
     position: relative
 }
 
+.title-info {
+    display: flex;
+    flex-direction: row;
+}
+
+.avatar-top {
+    border-radius: 50%!important;
+    height: 32px;
+    width: 32px;
+}
+
 .markdown-body,body {
-    font-family: Arial,"Hiragino Sans GB","冬青黑","Microsoft YaHei","微软雅黑",SimSun,"宋体",Helvetica,Tahoma,Arial sans-serif;
+    font-family: -apple-system, "system-ui", "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     font-size: 16px;
     line-height: 1.6;
     word-wrap: break-word;
@@ -95,9 +106,9 @@
 }
 
 .site-header h1 .avatar {
-    margin-top: -7px;
+    margin-top: -2px;
     margin-right: 9px;
-    margin-bottom: -16px
+    margin-bottom: -2px
 }
 
 .site-header-actions>li {
@@ -131,7 +142,7 @@
 
 .site-header-nav-item {
     display: inline-block;
-    padding: 6px 12px 15px;
+    padding: 6px 10px 15px;
     margin-left: 1.25rem;
     font-size: 1rem;
     color: #777
@@ -208,7 +219,7 @@
 }
 
 .site-footer-links li+li {
-    margin-left: 15px
+    margin-left: 10px
 }
 
 .share {
@@ -505,16 +516,15 @@
 }
 
 .markdown-body code,.markdown-body tt {
-    padding: .2em 0;
+    font-family: monospace, Consolas, "Liberation Mono", Menlo, Courier;
+    padding: 0 2px 0 2px;
     margin: 0;
-    font-size: 85%;
-    background-color: rgba(0,0,0,.04);
-    /* border-radius: 3px */
-}
-
-.markdown-body code:after,.markdown-body code:before,.markdown-body tt:after,.markdown-body tt:before {
-    letter-spacing: -.2em;
-    content: " "
+    font-size: 100%;
+    background-color: #f8f8f8;
+    color: #393a34;
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+    border: solid 1px #dddddd;
 }
 
 .markdown-body code br,.markdown-body tt br {
@@ -586,22 +596,6 @@
     /* border-radius: 3px; */
     -webkit-box-shadow: inset 0 -1px 0 #bbb;
     box-shadow: inset 0 -1px 0 #bbb
-}
-
-.title-info {
-    display: flex;
-    flex-direction: row;
-}
-
-.avatar-top {
-    border-radius: 50%!important;
-    height: 45px;
-    width: 45px;
-}
-
-.weather-info {
-    float: right;
-    line-height: normal;
 }
 
 .pl-c {
@@ -753,6 +747,7 @@ div.footnotes::before {
 
 img + em {
   color: grey;
+  display: block;
 }
 
 .content-header-ad { display:inline-block; width: 320px; height: 50px; }
