--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,10 @@
     <footer class="container">
 
+      {% include footer-ad.html %}
+
         <div class="site-footer" role="contentinfo">
             <div class="copyright left mobile-block">
-                Copyright © <script>document.write(new Date().getFullYear())</script>
+                    © <script>document.write(new Date().getFullYear())</script>
                     <span title="{{ site.author}}">{{ site.author }}</span>
                     <a href="javascript:window.scrollTo(0,0)" class="right mobile-visible">TOP</a>
             </div>
@@ -23,45 +25,14 @@
                 {% endfor %}
                 <li><a href="{{ site.url }}{{ site.subscribe_rss }}"><span class="octicon octicon-rss" style="color:orange;"></span></a></li>
             </ul>
-            <div class="mobile-hidden" style="margin-top:8px">
-                {% if site.components.busuanzi.enabled %}
-                <span id="busuanzi_container_site_pv">
-                    本站访问量&nbsp;<span id="busuanzi_value_site_pv"></span>&nbsp;次
-                </span>
-                <span id="busuanzi_container_site_uv">
-                    &nbsp;&nbsp;本站访客数&nbsp;<span id="busuanzi_value_site_uv"></span>&nbsp;人
-                </span>
-                {% if site.components.busuanzi.start_date %}
-                /&nbsp;统计始于&nbsp;{{ site.components.busuanzi.start_date }}
-                {% endif %}
-                {% endif %}
-                <span id="runtime_span"></span>
-                <script type="text/javascript">
-                    function show_runtime() {
-                        window.setTimeout("show_runtime()", 1000);
-                        X = new
-                        Date("05/10/2021 16:20:00");
-                        Y = new Date();
-                        T = (Y.getTime() - X.getTime());
-                        M = 24 * 60 * 60 * 1000;
-                        a = T / M;
-                        A = Math.floor(a);
-                        b = (a - A) * 24;
-                        B = Math.floor(b);
-                        c = (b - B) * 60;
-                        C = Math.floor((b - B) * 60);
-                        D = Math.floor((c - C) * 60);
-                        runtime_span.innerHTML = "本站已运行 " + A + " 天 " + B + " 小时 " + C + " 分 " + D + " 秒"
-                    }
-                    show_runtime();
-                </script>
-            </div>
+
+          {% include visit-stat.html %}
+
         </div>
     </footer>
     <div class="tools-wrapper">
       <a class="gotop" href="#" title="回到顶部"><span class="octicon octicon-arrow-up"></span></a>
     </div>
-    <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
     <!-- / footer -->
     {% if site.components.share.enabled %}
     <script src="{{ assets_base_url }}/assets/vendor/share.js/dist/js/share.min.js"></script>
@@ -76,9 +47,36 @@
       });
     </script>
 
+    {% if site.components.fancybox.enabled %}
+    <script src="https://fastly.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
+    <script>
+      $(document).ready(function() {
+        $("p img").each(function() {
+          var strA = "<a href='" + this.src + "' itemscope=\"\" itemtype=\"http://schema.org/ImageObject\" itemprop=\"url\" data-fancybox=\"default\" rel=\"default\"></a>";
+          $(this).wrapAll(strA);
+        });
+      });
+    </script>
+    {% endif %}
+
     {% if page.mermaid %}
-    <script src="{{ assets_base_url }}/assets/js/mermaid.min.js"></script>
-    <script>mermaid.initialize({startOnLoad:true});</script>
+    <script type="module">
+      import mermaid from 'https://fastly.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
+      mermaid.initialize({ startOnLoad: false });
+      await mermaid.run({
+        nodes: document.querySelectorAll('pre code.language-mermaid'),
+      });
+    </script>
+    <script type="text/javascript">
+  (function(){
+    $("pre code.language-mermaid").each(function(index, element) {
+      var preBlock = element.parentNode;
+      element.style.backgroundColor = 'initial';
+      preBlock.style.border = 'none';
+      preBlock.style.backgroundColor = 'initial';
+    });
+  })()
+    </script>
     {% endif %}
 
     {% if page.sequence %}
@@ -142,8 +140,95 @@ $(document).ready(function(){
 });
     </script>
     {% endif %}
-    {% if site.components.firework.enabled %}
+{% if page.mindmap2 %}
+    <script src="https://fastly.jsdelivr.net/npm/d3@6"></script>
+    <script src="https://fastly.jsdelivr.net/npm/markmap-view"></script>
+    <script src="https://fastly.jsdelivr.net/npm/markmap-autoloader@0.1.2/dist/index.min.js"></script>
+    <style>
+        .markmap > svg {
+          width: 100%;
+          height: 100%;
+          background: rgba(255, 255, 255, 0.9);
+        }
+    </style>
+    <script>
+        function fullScreen(nodeId) {
+            var element= document.getElementById(nodeId);  
+            if (window.ActiveXObject) {
+                var WsShell = new ActiveXObject('WScript.Shell');
+                WsShell.SendKeys('{F11}');
+            }
+            else if (element.requestFullScreen) {
+                element.requestFullScreen();
+            }
+            else if (element.msRequestFullscreen) {
+                element.msRequestFullscreen();
+            }
+            else if (element.webkitRequestFullScreen) {
+                element.webkitRequestFullScreen();
+            }
+            else if (element.mozRequestFullScreen) {
+                element.mozRequestFullScreen();
+            }
+        }
+
+        function fullExit() {
+            var element= document.getElementById("ddd");  
+            if (window.ActiveXObject) {
+                var WsShell = new ActiveXObject('WScript.Shell');
+                WsShell.SendKeys('{F11}');
+            }
+            else if (element.requestFullScreen) {
+                document.exitFullscreen();
+            }
+            else if (element.msRequestFullscreen) {
+                document.msExitFullscreen();
+            }
+            else if (element.webkitRequestFullScreen) {
+                document.webkitCancelFullScreen();
+            }
+            else if (element.mozRequestFullScreen) {
+                document.mozCancelFullScreen();
+            }
+        }
+
+        function insertAfter(newElement, targetElement) {
+            var parent = targetElement.parentNode;
+            if (parent.lastChild == targetElement) {
+                parent.appendChild(targetElement);
+            } else {
+                parent.insertBefore(newElement, targetElement.nextSibling);
+            }
+        }
+       
+        $(document).ready(function(){
+            $('.language-mindmap').each(function(index, element) {
+                window.markmap = {
+                    autoLoader: { manual: false },
+                };
+                var markdownText = element.textContent.trim();
+                var parentNode = element.parentNode.parentNode;
+                element.setAttribute('class', "markmap");
+                var nodeName = '.language-mindmap-' + index;
+                element.setAttribute("id", nodeName);
+                var viewerTipNode1 = document.createElement("a");
+                viewerTipNode1.appendChild(document.createTextNode("全屏"));
+                viewerTipNode1.setAttribute('onclick', 'fullScreen("' + nodeName + '")');
+                viewerTipNode1.setAttribute('style', 'font-size:0.8rem;font-style:italic;font-color:grey;');
+                viewerTipNode1.setAttribute('href', 'javascript:void(0)');
+                insertAfter(viewerTipNode1, element.parentNode);
+                var viewerTipNode2 = document.createElement("a");
+                viewerTipNode2.appendChild(document.createTextNode("语法提示"));
+                viewerTipNode2.setAttribute('href', 'https://markmap.js.org/');
+                viewerTipNode2.setAttribute('target', '_blank');
+                viewerTipNode2.setAttribute('style', 'font-size:0.8rem;font-style:italic;font-color:grey;padding-left:0.5rem;');
+                insertAfter(viewerTipNode2, viewerTipNode1);
+            });
+        });
+    </script>
+{% endif %}
+{% if site.components.firework.enabled %}
     <script src="{{ assets_base_url }}/assets/js/mouse-click.js"></script>
-    {% endif %}
-    </body>
+{% endif %}
+</body>
 </html>
