--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,13 +3,13 @@ layout: default
 ---
 
 {% assign assets_base_url = site.url %}
-{% if site.fastly.jsdelivr.enabled %}
+{% if site.cdn.jsdelivr.enabled %}
 {% assign assets_base_url = "https://fastly.jsdelivr.net/gh/" | append: site.repository | append: '@master' %}
 {% endif %}
 <section class="collection-head small geopattern" data-pattern-id="{{ page.title | truncate: 15}}">
     <div class="container">
       <div class="columns">
-        <div class="column two-thirds page-title">
+        <div class="column two-thirds">
           <div class="collection-title">
             <h1 class="collection-header">{{ page.title }}</h1>
             {% if page.subtitle %}
@@ -22,7 +22,7 @@ layout: default
           </div>
         </div>
         <div class="column one-third mobile-hidden">
-          {% include sidebar-weather.html %}
+          {% include sidebar-qrcode.html %}
         </div>
       </div>
     </div>
