--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 {% assign assets_base_url = site.url %}
-{% if site.fastly.jsdelivr.enabled %}
+{% if site.cdn.jsdelivr.enabled %}
 {% assign assets_base_url = "https://fastly.jsdelivr.net/gh/" | append: site.repository | append: '@master' %}
 {% endif %}
 <section class="collection-head small geopattern" data-pattern-id="{{ page.title | truncate: 15, ''}}">
@@ -24,11 +24,6 @@ layout: default
             <a href="{{ site.url }}/categories/#{{ cat }}" title="{{ cat }}">{{ cat }}</a>
           </span>
           {% endfor %}
-          <span class="meta-info octicon octicon-eye">
-            <span id="busuanzi_container_page_pv meta-info">
-              浏览量 <span id="busuanzi_value_page_pv"></span> 次
-            </span>
-          </span>
           {% if site.components.word_count.enabled %}
           <span class="meta-info">
             <span class="octicon octicon-clock"></span>
@@ -39,8 +34,8 @@ layout: default
       </div>
     </div>
     <div class="column one-fourth mobile-hidden">
-      <div class="collection-title ">
-<!--        {% include sidebar-weather.html %}-->
+      <div class="collection-title">
+        {% include sidebar-qrcode.html %}
       </div>
     </div>
   </div>
@@ -50,6 +45,7 @@ layout: default
 <section class="container content">
 <div class="columns">
   <div class="column three-fourths" >
+    {% include content-header-ad.html %}
     <article class="article-content markdown-body">
     {{ content }}
     {% include copyright.html %}
@@ -57,6 +53,7 @@ layout: default
     <div class="share">
       {% include sns-share.html %}
     </div>
+    {% include content-footer-ad.html %}
     <div class="comment">
       {% include comments.html %}
     </div>
