--- a/assets/css/globals/responsive.css
+++ b/assets/css/globals/responsive.css
@@ -1,6 +1,6 @@
 .container {
   width: auto;
-  max-width: 1113.35px;
+  max-width: 60%;
   padding-left: 20px;
   padding-right: 20px
 }
@@ -75,7 +75,6 @@
     padding: 0 .5rem;
     margin-left: 0;
     font-size: 1rem;
-    display: block;
     text-align: right;
   }
   .collapsed {
