--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,7 +17,7 @@
             <a href="{{ site.github.repository_url }}" target="_blank" aria-label="view source code">
                 <span class="mega-octicon octicon-mark-github" title="GitHub"></span>
             </a>
-            <ul class="site-footer-links mobile-hidden">
+            <ul class="site-footer-links mobile-hidden" style="margin-bottom: 7px;">
                 {% for nav in site.navs %}
                 <li>
                     <a href="{{ site.url }}{{ nav.href }}" title="{{ nav.label }}" target="{{ nav.target | default: _self }}">{{ nav.label }}</a>
